--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,9 @@
 
     <title>Uploader </title>
   </head>
+  <script
+src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js">
+</script>
   <body>
   
     <div id="root"></div>
